add GET POST PUT DELETE API Card
